# Thesis

./: .gitignore  README.md  config.example.yaml  demo.ps1  pyproject.toml
data/bundles/easy/001/: Run.ps1  Utils.ps1
data/bundles/easy/002/: Run.ps1  Utils.ps1
data/bundles/easy/003/: run.sh  truth.yaml
data/bundles/easy/004/: run.sh  truth.yaml
data/bundles/easy/005/: Run.ps1  Utils.ps1
data/bundles/easy/006/: run.sh  truth.yaml
data/bundles/easy/007/: run.sh  truth.yaml
data/bundles/easy/008/: run.sh  truth.yaml
data/bundles/easy/009/: run.sh  truth.yaml
data/bundles/easy/010/: run.sh  truth.yaml
data/bundles/easy/011/: run.sh  truth.yaml
demo_out/: graph.dot  predicted_graph.yaml  report.md  run_report.json
examples/bundle1/: load.sh  post.sh  process.py  run.sh  truth.yaml
examples/bundle1/utils/: cleanup.sh
examples/bundle2/: truth.yaml
examples/company_demo/: post.sh
examples/company_demo/windows/: main.bat  prep.cmd
out_2R/: graph.dot  llm_specs.json  predicted_graph.yaml
out_4R/: graph.dot  llm_specs.json  predicted_graph.yaml  report.md  run_report.json
scriptgraph/: __init__.py  agent_mapper.py  agents.py  cli.py  config.py  env.py  exporter.py  graph.py  llm_adapter.py  logging_db.py  metrics.py  privacy.py  scanner.py  stats_cmd.py  utils.py
scriptgraph/parsers/: __init__.py  batch.py  perl.py  powershell.py  python_cli.py  shell.py
tools/: bench.ps1  bench_ablate.ps1  bench_ablate_plot.py  bench_aggregate.py  bench_stats.py  bench_table.py  export_prompts.py  generate_bundles.py  make_bundles.ps1  smoke_score.ps1
(+7295 files in other folders)
